Prevent reminded usernames from overflowing

--- a/src/app/modules/newsfeed/activity-v2/activity.component.ng.scss
+++ b/src/app/modules/newsfeed/activity-v2/activity.component.ng.scss
@@ -26,6 +26,15 @@
         padding-right: $activitySpacingRight--feed--mobile;
       }
     }
+
+    .m-activity__rightColumn,
+    ::ng-deep m-activityV2__quote .m-activity__rightColumn {
+      // Prevents remind username overflow
+      max-width: calc(100% - $activitySpacingLeft--feed);
+      @media screen and (max-width: $max-mobile) {
+        max-width: calc(100% - $activitySpacingLeft--feed--mobile);
+      }
+    }
   }
 
   // *********************************
@@ -100,6 +109,15 @@
     @media screen and (max-width: $max-mobile) {
       padding: 0;
     }
+
+    .m-activity__rightColumn,
+    ::ng-deep m-activityV2__quote .m-activity__rightColumn {
+      // Prevents remind username overflow
+      max-width: calc(100% - $activitySpacing--modal);
+      @media screen and (max-width: $max-mobile) {
+        max-width: calc(100% - $activitySpacing--modal);
+      }
+    }
   }
 
   // *********************************
@@ -113,6 +131,7 @@
     }
     .m-activity__rightColumn {
       width: 100%;
+      max-width: 100%;
     }
   }
 
@@ -136,6 +155,15 @@
         @media screen and (max-width: $max-mobile) {
           padding-left: $activityAvatarSpacingLeft--single--mobile;
           padding-right: $activitySpacingRight--single--mobile;
+        }
+      }
+
+      .m-activity__rightColumn,
+      ::ng-deep m-activityV2__quote .m-activity__rightColumn {
+        // Prevents remind username overflow
+        max-width: calc(100% - $activitySpacingLeft--single);
+        @media screen and (max-width: $max-mobile) {
+          max-width: calc(100% - $activitySpacingLeft--single--mobile);
         }
       }
     }
@@ -189,6 +217,12 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+
+    // Prevents remind username overflow
+    max-width: calc(100% - $activitySpacingLeft--feed);
+    @media screen and (max-width: $max-mobile) {
+      max-width: calc(100% - $activitySpacingLeft--feed--mobile);
+    }
   }
 
   .m-activity__flagRow {
